--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <li><a href="articles.html">Articles</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="campaigning.html">Campaigning</a></li>
-        <li><a href="fundraisers.html">Fundraisers</a></li>
+        <li><a href="campaign.html">Campaign</a></li>
+        <li><a href="donate.html">Donate</a></li>
         <li><a href="quiz.html">Quiz</a></li>
-        <li><a href="volunteering.html">Volunteering</a></li>
+        <li><a href="volunteer.html">Volunteering</a></li>
       </ul>
     </nav>
 
