--- a/index.html
+++ b/index.html
@@ -1,83 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Seedsofsurvival-style.css">
-  <title>Seeds of Survival - Home</title>
-
-  <!-- EaselJS (CreateJS) CDN -->
-  <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Home — Endangered Crop Species</title>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Seeds of Survival Logo" class="logo">
-    <h1>Seeds of Survival</h1>
-  </header>
 
-  <!-- Canvas section for EaselJS animation -->
-  <div style="text-align:center; margin: 20px 0;">
-    <canvas id="seedCanvas" width="300" height="200" style="background:#f3f3f3; border-radius:8px;"></canvas>
-  </div>
+<header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="videos.html">Videos</a>
+    <a href="faqs.html">FAQs</a>
+    <a href="campaign.html">Campaigning</a>
+    <a href="donate.html">Donate</a>
+    <a href="quiz.html">Quiz</a>
+    <a href="volunteer.html">Volunteering</a>
+    <a href="endangered-crop-species.html">Endangered Species</a>
+  </nav>
+</header>
 
-  <script>
-    const canvas = document.getElementById("seedCanvas");
-    const stage = new createjs.Stage(canvas);
+<main>
+  <h1>Welcome — Protect Crop Diversity</h1>
+  <p>Crop diversity is essential for global food security, nutrition, resilience, and cultural heritage.</p>
+</main>
 
-    // Create a simple animated circle (representing a seed)
-    const seed = new createjs.Shape();
-    seed.graphics.beginFill("#6b8e23").drawCircle(0, 0, 20);
-    seed.x = 50;
-    seed.y = 100;
-    stage.addChild(seed);
-
-    // Animation - make it bounce left and right
-    createjs.Ticker.framerate = 60;
-    createjs.Ticker.addEventListener("tick", tick);
-
-    let direction = 1;
-
-    function tick() {
-      seed.x += direction * 2;
-      if (seed.x > 280 || seed.x < 20) direction *= -1; // reverse direction
-
-      stage.update();
-    }
-  </script>
-
-  <div class="wrapper">
-    <nav class="sidebar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="videos.html">Videos</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="campaigning.html">Campaigning</a></li>
-        <li><a href="fundraisers.html">Fundraisers</a></li>
-        <li><a href="quiz.html">Quiz</a></li>
-        <li><a href="volunteering.html">Volunteering</a></li>
-      </ul>
-    </nav>
-
-    <main class="content">
-      <h2>Welcome to Seeds of Survival</h2>
-      <p>Crop diversity is the foundation of global food security...</p>
-
-      <h3>Explore the Site</h3>
-      <div class="grid">
-        <div class="card"><a href="about.html">About the Crisis</a></div>
-        <div class="card"><a href="articles.html">Articles</a></div>
-        <div class="card"><a href="videos.html">Videos</a></div>
-        <div class="card"><a href="faq.html">FAQs</a></div>
-        <div class="card"><a href="campaigning.html">Campaigning</a></div>
-        <div class="card"><a href="fundraisers.html">Fundraisers</a></div>
-        <div class="card"><a href="quiz.html">Take the Quiz</a></div>
-        <div class="card"><a href="volunteering.html">Volunteering Opportunities</a></div>
-      </div>
-
-      <footer>&copy; 2025 Seeds of Survival. All Rights Reserved.</footer>
-    </main>
-  </div>
 </body>
 </html>
