--- a/volunteer.html
+++ b/volunteer.html
@@ -1,1 +1,32 @@
+<!doctype html html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Volunteering — Endangered Crop Species</title>
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
 
+<header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="videos.html">Videos</a>
+    <a href="faqs.html">FAQs</a>
+    <a href="campaign.html">Campaigning</a>
+    <a href="donate.html">Donate</a>
+    <a href="quiz.html">Quiz</a>
+    <a href="volunteer.html">Volunteering</a>
+    <a href="endangered-crop-species.html">Endangered Species</a>
+  </nav>
+</header>
+
+<main>
+  <h1>Volunteering Opportunities</h1>
+  <p>Join local and global efforts to protect crop diversity.</p>
+</main>
+
+</body>
+</html>
