--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="donate.html">Donate</a>
     <a href="quiz.html">Quiz</a>
     <a href="volunteer.html">Volunteering</a>
-    <a href="endangered-crop-species.html">Endangered Species</a>
+    <a href="comments.html">Endangered Species</a>
   </nav>
 </header>
 
