--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Home — Endangered Crop Species</title>
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
