Update navigation links for Campaign and Volunteer

--- a/volunteer.html
+++ b/volunteer.html
@@ -15,10 +15,10 @@
     <a href="articles.html">Articles</a>
     <a href="videos.html">Videos</a>
     <a href="faqs.html">FAQs</a>
-    <a href="campaign.html">Campaigning</a>
+    <a href="campaign.html">Campaign</a>
     <a href="donate.html">Donate</a>
     <a href="quiz.html">Quiz</a>
-    <a href="volunteer.html">Volunteering</a>
+    <a href="volunteer.html">Volunteer</a>
     <a href="comments.html">Comments</a>
   </nav>
 </header>
