Update stylesheet link and navigation text

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>About — Endangered Crop Species</title>
-  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -15,11 +15,11 @@
     <a href="articles.html">Articles</a>
     <a href="videos.html">Videos</a>
     <a href="faqs.html">FAQs</a>
-    <a href="campaign.html">Campaigning</a>
+    <a href="campaign.html">Campaign</a>
     <a href="donate.html">Donate</a>
     <a href="quiz.html">Quiz</a>
-    <a href="volunteer.html">Volunteering</a>
-    <a href="comments.html">Endangered Species</a>
+    <a href="volunteer.html">Volunteer</a>
+    <a href="comments.html">Comments</a>
   </nav>
 </header>
 
