--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Endangered Crop Species — Home</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seeds of Survival</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Header -->
   <header class="header">
-    <h1>Endangered Crop Species</h1>
-    <p class="subtitle">Protecting the roots of global agriculture.</p>
+    <h1>Seeds of Survival</h1>
+    <p class="tagline">
+      Preserving crop diversity to protect global food security.
+    </p>
   </header>
 
-  <nav class="nav-grid">
-    <a href="about.html" class="nav-card">About</a>
-    <a href="articles.html" class="nav-card">Articles</a>
-    <a href="videos.html" class="nav-card">Videos</a>
-    <a href="faqs.html" class="nav-card">FAQs</a>
-    <a href="quiz.html" class="nav-card">Quiz</a>
-    <a href="comments.html" class="nav-card">Comments</a>
-    <a href="donate.html" class="nav-card">Donate</a>
-    <a href="volunteer.html" class="nav-card">Volunteer</a>
-    <a href="campaign.html" class="nav-card">Campaign</a>
-  </nav>
+  <!-- Homepage Navigation Cards -->
+  <main class="home-container">
 
-  <footer class="footer">© 2025 Endangered Crop Species Project</footer>
+    <a href="about.html" class="home-card">
+      <h2>About</h2>
+      <p>Learn what endangered crop species are, why they matter, and who is affected.</p>
+    </a>
+
+    <a href="articles.html" class="home-card">
+      <h2>Articles</h2>
+      <p>Read research, reports, and stories about threatened crops around the world.</p>
+    </a>
+
+    <a href="videos.html" class="home-card">
+      <h2>Videos</h2>
+      <p>Watch documentaries and short videos highlighting agricultural biodiversity.</p>
+    </a>
+
+    <a href="donate.html" class="home-card">
+      <h2>Donate</h2>
+      <p>Support organizations working to protect seeds and farming communities.</p>
+    </a>
+
+    <a href="volunteer.html" class="home-card">
+      <h2>Volunteer</h2>
+      <p>Find ways to get involved in conservation and seed-saving initiatives.</p>
+    </a>
+
+    <a href="campaign.html" class="home-card">
+      <h2>Campaign</h2>
+      <p>Explore ongoing campaigns advocating for crop diversity and sustainability.</p>
+    </a>
+
+  </main>
+
 </body>
 </html>
