Revamp header with logo and new tagline

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
   <!-- Header -->
   <header class="header">
-    <h1>Seeds of Survival</h1>
-    <p class="tagline">
-      Preserving crop diversity to protect global food security.
-    </p>
-  </header>
+  <div class="header-inner">
+    <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
+    <div class="header-text">
+      <h1>Seeds of Survival</h1>
+      <p class="tagline">Keeping Food on Your Plate</p>
+    </div>
+  </div>
+</header>
 
   <!-- Homepage Navigation Cards -->
   <main class="home-container">
