--- a/about.html
+++ b/about.html
@@ -10,8 +10,14 @@
 <body>
 
   <header class="header">
-    <h1>Seeds of Survival</h1>
-  </header>
+  <div class="header-inner">
+    <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
+    <div class="header-text">
+      <h1>Seeds of Survival</h1>
+      <p class="tagline">Preserving crop diversity to protect global food security.</p>
+    </div>
+  </div>
+</header>
 
   <div class="layout">
 
