Add header text to about.html

--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
   <header class="header">
   <div class="header-inner">
     <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
+    <div class="header-text">
+      <h1>Seeds of Survival</h1>
   </div>
 </header>
 
