--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
     <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
     <div class="header-text">
       <h1>Seeds of Survival</h1>
+      <p class="tagline">Preserving crop diversity to protect global food security.</p>
+    </div>
   </div>
 </header>
 
