Update logo image source in about.html

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
   <header class="header">
   <div class="header-inner">
-    <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
+    <img src="logo.png" alt="Seeds of Survival logo" class="logo">
     <div class="header-text">
       <h1>Seeds of Survival</h1>
       <p class="tagline">Preserving crop diversity to protect global food security.</p>
