Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header class="header">
   <div class="header-inner">
-    <img src="images/logo.png" alt="Seeds of Survival logo" class="logo">
+    <img src="logo.png" alt="Seeds of Survival logo" class="logo">
     <div class="header-text">
       <h1>Seeds of Survival</h1>
       <p class="tagline">Keeping Food on Your Plate</p>
