--- a/about.html
+++ b/about.html
@@ -5,32 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Seeds of Survival</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
 
-  <header class="header">
+ <!--  <header class="header">
   <div class="header-inner">
     <img src="logo.png" alt="Seeds of Survival logo" class="logo">
     <div class="header-text">
       <h1>Seeds of Survival</h1>
-      <p class="tagline">Preserving crop diversity to protect global food security.</p>
+      <p class="tagline">Keeping Food on Your Plate</p>
     </div>
   </div>
-</header>
+</header> -->
 
   <div class="layout">
 
     <!-- Side Navigation -->
     <nav class="sidebar">
-      <h2>Navigate</h2>
-      <a href="index.html">Home</a>
+      <a href="index.html">
+      <img src="logo.png" alt="Seeds of Survival logo" class="logo">
+      </a>
       <a href="about.html">About</a>
       <a href="articles.html">Articles</a>
       <a href="videos.html">Videos</a>
-      <a href="faqs.html">FAQs</a>
-      <a href="quiz.html">Quiz</a>
-      <a href="comments.html">Comments</a>
+      
+      <hr/>
       <a href="donate.html">Donate</a>
       <a href="volunteer.html">Volunteer</a>
       <a href="campaign.html">Campaign</a>
@@ -38,7 +40,9 @@
 
     <!-- Main Content -->
     <main class="content">
-      <h2>About the Project</h2>
+      <button class="capsule"><a href="faqs.html">FAQ</a></button>
+      <button class="capsule"><a href="quiz.html">Quiz</a></button>
+      <h2>About</h2>
 
       <h3>Who?</h3>
       <p>The endangerment of crop species affects farmers, consumers, indigenous communities, and the global food system as a whole. Farmers lose access to resilient varieties, consumers face reduced food choices, and traditional communities risk losing culturally important crops. Ultimately, everyone who depends on agriculture—now and in the future—is impacted by the shrinking diversity of crops.</p>
@@ -61,7 +65,6 @@
 
   </div>
 
-  <footer class="footer">© 2025 Endangered Crop Species Project</footer>
 
 </body>
 </html>
