--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seeds of Survival</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 </head>
 <body>
 
@@ -16,42 +19,62 @@
       <p class="tagline">Keeping Food on Your Plate</p>
     </div>
   </div>
+  <button class="capsule"><a href="faqs.html">FAQ</a></button>
+      <button class="capsule"><a href="quiz.html">Quiz</a></button>
 </header>
 
   <!-- Homepage Navigation Cards -->
+
   <main class="home-container">
 
+
+
     <a href="about.html" class="home-card">
-      <h2>About</h2>
+      <i class="material-icons">info</i>
+
+
+
+      <h2> About</h2>
+              
+
       <p>Learn what endangered crop species are, why they matter, and who is affected.</p>
     </a>
 
     <a href="articles.html" class="home-card">
+    <i class="material-icons">bookmark_stacks</i>
       <h2>Articles</h2>
+
       <p>Read research, reports, and stories about threatened crops around the world.</p>
     </a>
 
     <a href="videos.html" class="home-card">
+      <i class="material-icons">switch_video</i>
+      
       <h2>Videos</h2>
       <p>Watch documentaries and short videos highlighting agricultural biodiversity.</p>
     </a>
 
     <a href="donate.html" class="home-card">
+      <span class="material-icons">currency_rupee</span>
+
       <h2>Donate</h2>
       <p>Support organizations working to protect seeds and farming communities.</p>
     </a>
 
     <a href="volunteer.html" class="home-card">
+      <i class="material-icons">volunteer_activism</i>
+
       <h2>Volunteer</h2>
       <p>Find ways to get involved in conservation and seed-saving initiatives.</p>
     </a>
 
     <a href="campaign.html" class="home-card">
+      <i class="material-icons">campaign</i>
       <h2>Campaign</h2>
       <p>Explore ongoing campaigns advocating for crop diversity and sustainability.</p>
     </a>
 
   </main>
-
+  <footer class="footer">© 2026 Endangered Crop Species Project</footer>
 </body>
 </html>
